<resources>
    <string name="app_name">CalculadoKotlin</string>
    <string name="tx_resultado"></string>
    <string name="txt_borrar">C</string>
    <string name="txt_0">0</string>
    <string name="txt_1">1</string>
    <string name="txt_2">2</string>
    <string name="txt_3">3</string>
    <string name="txt_4">4</string>
    <string name="txt_5">5</string>
    <string name="txt_6">6</string>
    <string name="txt_7">7</string>
    <string name="txt_8">8</string>
    <string name="txt_9">9</string>
    <string name="txt_punto">.</string>
    <string name="txt_suma">+</string>
    <string name="txt_resta">-</string>
    <string name="txt_multiplicacion">*</string>
    <string name="txt_division">/</string>
    <string name="txt_igual">=</string>

</resources>